--- a/frontend/src/app/main-layout/navigation/navigation.component.html
+++ b/frontend/src/app/main-layout/navigation/navigation.component.html
@@ -21,7 +21,7 @@
             <a routerLink="post/index" routerLinkActive="active" class="list-group-item list-group-item-action waves-effect">
                     <mdb-icon fas icon="table" class="mr-3"></mdb-icon>Post</a>
             <a routerLink="maps/map1" routerLinkActive="active" class="list-group-item list-group-item-action waves-effect">
-                <mdb-icon far icon="map" class="mr-3"></mdb-icon>Maps</a>
+                <mdb-icon far icon="map" class="mr-3"></mdb-icon>Maps-1</a>
             <a routerLink="nonExistingPath" routerLinkActive="active" class="list-group-item list-group-item-action waves-effect">
                 <mdb-icon fas icon="exclamation" class="mr-3"></mdb-icon>404</a>
 
